fixed spacing issue

--- a/Project-I-Social-Card/social-card/src/App.css
+++ b/Project-I-Social-Card/social-card/src/App.css
@@ -4,7 +4,7 @@
 */
 
 .card-container {
-  height: 520px;
+  height: 575px;
   width: 45%;
   margin: 1em auto;
   border: 0.5px solid black;
